Closed Bug 491709 Opened 17 years ago Closed 17 years ago

"because the server has disabled login" is horribly bad error message

Categories

(MailNews Core :: Networking: IMAP, defect)

defect
Not set
trivial

Tracking

(Not tracked)

RESOLVED FIXED
Thunderbird 3.0b3

People

(Reporter: tss, Assigned: mkmelin)

Details

(Keywords: polish)

Attachments

(2 files)

User-Agent: Mozilla/5.0 (X11; U; Linux i686; en-US; rv:1.9.0.10) Gecko/2009042523 Ubuntu/9.04 (jaunty) Firefox/3.0.10 Build Identifier: Just because the IMAP CAPABILITY is called LOGINDISABLED, Thunderbird shouldn't use that naming. The problem is never that logins are disabled. The problem is that plaintext authentication is disabled. Change the error message to something like: You cannot log in to XXX because the server doesn't allow plaintext authentication without SSL or TLS. Enable SSL or TLS or secure authentication in the account settings. And preferably the "or secure authentication" would be shown only if server actually supports it, but that's not as important as getting rid of the "disabled login" text. Reproducible: Always
It also says - You may need to connect via SSL or TLS.
Yes, but it doesn't seem to be enough. I mostly hear about this error from people who are setting up their own mail server and have trouble understanding what it means. "But I've enabled logins in my server, why doesn't it work!"
Status: UNCONFIRMED → NEW
Ever confirmed: true
OS: Linux → All
Hardware: x86 → All
Version: unspecified → Trunk
Flags: wanted-thunderbird3?
Seems like a worthwhile polish change, not sure if we'll have time to work on a better overall experience. david: do you think this is something we should just change the strings or is it more complicated?
Keywords: polish
Easy to change - just change this string: http://hg.mozilla.org/comm-central/diff/e4f4569d451a/mail/locales/en-US/chrome/messenger/imapMsgs.properties Here's what it currently says: 5104=You cannot log in to %S because the server has disabled login. You may need to connect via SSL or TLS. Please check the account settings for your mail server. I guess we're supposed to add a new string when we change the text of old strings, which makes it marginally more complicated, but first we need new text for the string.
Off the top of my head I'd go with something like this, but we should work on it a little more. Please check Account Settings for server %S. Common configuration issues are plaintext authentication disabled or secure authentication is not available in the server settings. The server is reporting that you login settings are not available.
Hmm, I think the original is better. The key sentence is "You may need to connect via SSL or TLS".
Though is should probably talk about SSL/TLS or STARTTLS.
Assignee: nobody → mkmelin+mozilla
Flags: wanted-thunderbird3? → wanted-thunderbird3+
Attached image proposed wording mockup —
How about: You cannot log in to imap.example.org because the server doesn't allow plaintext authentication without STARTTLS or SSL/TLS. Try enabling connection security or secure authentication in the account settings.
that's a big improvement in that it tells the user what to do to fix the problem. "plaintext" authentication won't mean much to users - perhaps non-secure authentication?
That's a bit more common language, but I suppose there's a risk people will think they need to check "secure authentication" as the wording is the same. They may want to do that, but i'd think that's the less common problem of the two alternatives.
Attached patch proposed fix — — Splinter Review
Attachment #385353 - Flags: ui-review?(clarkbw)
Attachment #385353 - Flags: superreview?(bienvenu)
Attachment #385353 - Flags: review?(bienvenu)
Status: NEW → ASSIGNED
Target Milestone: --- → Thunderbird 3.0b3
Component: General → Networking: IMAP
Product: Thunderbird → MailNews Core
QA Contact: general → networking.imap
Comment on attachment 385353 [details] [diff] [review] proposed fix thx, Magnus
Attachment #385353 - Flags: superreview?(bienvenu)
Attachment #385353 - Flags: superreview+
Attachment #385353 - Flags: review?(bienvenu)
Attachment #385353 - Flags: review+
Attachment #385353 - Flags: ui-review?(clarkbw) → ui-review+
Comment on attachment 385353 [details] [diff] [review] proposed fix nice! looks good
changeset: 2963:409024ba9349 http://hg.mozilla.org/comm-central/rev/409024ba9349 ->FIXED
Status: ASSIGNED → RESOLVED
Closed: 17 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: