Bug 491709: "because the server has disabled login" is horribly bad error message. ui-r=clarkbw, r+sr=bienvenu